# wasm_luau

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build-multicore.sh  build.sh  corrector  corrector.cpp  docker-build.sh  input.lua  install.sh  main.cpp  run.sh  sanitize.sh  test.html  wasm.cpp
luau/: Makefile
luau/CodeGen/src/: CodeAllocator.cpp
luau/VM/src/: ldo.cpp
web/: index.html  wasm_luau.js  wasm_luau.wasm
