cmake_minimum_required(VERSION 3.8)

option(WASM_BUILD "Compile wasm" OFF) #OFF by default
if(WASM_BUILD)
project(wasm_luau)
set (CMAKE_CXX_STANDARD 17)
add_subdirectory("luau")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fexceptions")
add_executable(wasm_luau wasm.cpp)
set_target_properties(wasm_luau PROPERTIES LINK_FLAGS "-s EXPORTED_FUNCTIONS=_main,_malloc -sNO_DISABLE_EXCEPTION_CATCHING -sEXPORT_NAME='LuauModule'")
target_link_libraries(wasm_luau PUBLIC Luau.Compiler)
target_link_libraries(wasm_luau PUBLIC Luau.VM)
target_link_libraries(wasm_luau PUBLIC embind)
add_dependencies(wasm_luau Luau.Compiler Luau.VM)
else()
  project(corrector)
set (CMAKE_CXX_STANDARD 17)
add_subdirectory("luau")
add_definitions( -DGLOBAL_INPUT_PATH )
  add_executable(corrector corrector.cpp)
target_link_libraries(corrector PUBLIC Luau.Compiler)
target_link_libraries(corrector PUBLIC Luau.VM)
endif(WASM_BUILD)
unset(WASM_BUILD CACHE)
